fix radio css alignement

--- a/lemarche/static/itou_marche/components/_forms.scss
+++ b/lemarche/static/itou_marche/components/_forms.scss
@@ -22,5 +22,5 @@ input[type="radio"] {
     position: relative;
     opacity: 1.0;
     margin-top: 0.3rem;
-    margin-left: -1.25rem;
+    // margin-left: -1.25rem;
 }
